[package]
name = "concurency_thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "*"
dict = "*"
trees = "=0.4.2"
graph = "0.3.1"
binary = "0.0.0"
heap = "0.1.0"
linked-list = "0.0.3"
util = "0.1.3"
etcommon-util = "0.1.0"
sum = "0.1.7"
rocket = "0.5.1"
